--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "prod": "node dist/server.js",
     "build": "tsc",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "fix": "eslint src --fix"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "eslint": "9.x",
     "globals": "^15.3.0",
     "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.5",
     "typescript-eslint": "^7.10.0"
   },
   "name": "assignment-2",
