create get products and get products by id and create products

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.0"
+    "mongoose": "^8.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
@@ -25,7 +26,6 @@
   },
   "name": "assignment-2",
   "module": "src/server.ts",
-  "type": "module",
   "peerDependencies": {
     "typescript": "^5.0.0"
   }
